@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<data>
+    <xpath expr="/form/field[@name='default_dunning_procedure']" position="after">
+        <label name="dunning_email_fallback"/>
+        <field name="dunning_email_fallback"/>
+    </xpath>
+</data>
